--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,10 +33,8 @@
        <div class="row">
         <div class="col l6">
           <h5>Powered by:</h5>
-               <a class="grey-text text-lighten-2" href="https://github.com/ibanb04"><i class="fab fa-github fa-2x"></i> Ivan Bettin</a>
-               <br></br>
-               <a class="grey-text text-lighten-2" href="https://github.com/jesusramosv"><i class="fab fa-github fa-2x"></i> Jesus Ramos</a>
-               
+               <a class="grey-text text-lighten-2" href="https://github.com/ibanb04"><i class="fab fa-github fa-2x"></i> Ivan Bettin</a> <br>
+               <a class="grey-text text-lighten-2" href="https://github.com/jesusramosv"><i class="fab fa-github fa-2x"></i> Jesus Ramos</a>               
         </div>
         <br>
         <br>
