se agrego el select a la v

--- a/app/views/departaments/new.html.erb
+++ b/app/views/departaments/new.html.erb
@@ -9,7 +9,7 @@
     <%= f.text_field :description, autofocus: true %>
 </div>
 <div>
-    <%= f.submit %>
+    <%= f.submit "Crear",  class: 'waves-effect waves-light btn blue'%>
 </div>
 
 <% end %>
