Se agregó controller de la tabla review

--- a/app/views/departaments/index.html.erb
+++ b/app/views/departaments/index.html.erb
@@ -23,5 +23,5 @@
         </td>
     </tr>
         <% end %>
-    <%= link_to "Nuevo", new_departament_path ,class: 'waves-effect waves-light btn blue'%>
+    <%= link_to "Nuevo", new_departament_path ,class: 'waves-effect waves-light btn blue backup' %>
 </table>
