Crud de la tabla Review terminado

--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -75,7 +75,7 @@
 </div>
 
     <div class="actions card-action center-align ">
-    <%= f.submit "Crear", class: 'waves-effect waves-light btn cyan'%>
+    <%= f.submit "Actualizar", class: 'waves-effect waves-light btn cyan'%>
     </div>
     
   <% end %>
