--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -7,6 +7,9 @@
             <th>Mensaje</th>
             <th>PQR</th>
             <th>Usuario</th>
+            <th>Editar</th>
+            <th>Eliminar</th>
+            
             
             
         </thead>
